Began converting save_handler to handle all forms

--- a/Components/httpServer/HTML/wifi-settings.html
+++ b/Components/httpServer/HTML/wifi-settings.html
@@ -54,6 +54,8 @@
             <input type="password" id="password" name="password" placeholder="Enter Password" maxlength="64">
             
             <button type="submit">Submit</button>
+
+            <input type="hidden" name="origin_page" value="wifi-settings">
         </form>
         <a href="/">
             <button id="back-button">Back to Main Page</button>
