Added search and replace

--- a/Components/httpServer/HTML/wifi-settings.html
+++ b/Components/httpServer/HTML/wifi-settings.html
@@ -67,7 +67,7 @@
         <div id="current-ssid">
             <h2>Current WiFi Settings: </h2>
             <label for="saved-ssid">SSID:</label>
-            <input type="text" id="saved-ssid" name="saved-ssid" value="%stored-ssid%" readonly>
+            <input type="text" id="saved-ssid" name="saved-ssid" value="%001%" readonly>
         </div>
 
         <form id="wifi-form" method="post" action="/save">
