--- a/Components/httpServer/HTML/wifi-settings.html
+++ b/Components/httpServer/HTML/wifi-settings.html
@@ -42,14 +42,14 @@
             background-color: grey;
         }
 
-        #current-ssid {
+        #current-settings {
             background-color: #e9e9e9;
             padding: 10px;
             margin-bottom: 20px;
             border-radius: 5px;
         }
 
-        #current-ssid h2 {
+        #current-settings h2 {
             margin-top: 0;
             color: #333;
         }
@@ -59,15 +59,23 @@
             border: 1px solid #8c8a8a;
         }
 
+        #saved-password {
+            background-color: #f0f0f0;
+            border: 1px solid #8c8a8a;
+        }
+
 
     </style>
 </head>
 <body>
     <div class="container">
-        <div id="current-ssid">
+        <div id="current-settings">
             <h2>Current WiFi Settings: </h2>
             <label for="saved-ssid">SSID:</label>
             <input type="text" id="saved-ssid" name="saved-ssid" value="%001%" readonly>
+
+            <label for="saved-password">Password:</label>
+            <input type="text" id="saved-password" name="saved-password" value="%002%" readonly>
         </div>
 
         <form id="wifi-form" method="post" action="/save">
